[project]
name = "plango"
classifiers = ["Private :: Do Not Upload"]
version = "0.1.0"
dependencies = [
    "langgraph>=0.5.4",
    "langchain>=0.3.27",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "slowapi>=0.1.9",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "langchain-groq>=0.3.7",
    "langchain-tavily>=0.2.11",
    "langsmith>=0.4.14",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]==3.2.6",
]

[tool.ruff]
