load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "aggregate",
    srcs = ["agent.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/application",
        "//agents/hotel/application",
        "//agents/plan/application",
        "//agents/shared",
        "//agents/shared:runtime",
        "//agents/shared/data_stream",
        "//agents/shared/infrastructure",
        "@pip//langchain_core",
        "@pip//langgraph",
        "@pip//langgraph_checkpoint",
        "@pip//langgraph_checkpoint_postgres",
        "@pip//langgraph_swarm",
        "@pip//loguru",
        "@pip//psycopg_pool",
    ],
)
