load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "api",
    srcs = [
        "__init__.py",
        "common.py",
        "conversation.py",
        "itinerary.py",
        "response.py",
    ],
    imports = ["."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/aggregate",
        "//agents/api/services",
        "//agents/chat/domain",
        "//agents/shared:runtime",
        "//agents/shared/data_stream",
        "//agents/shared/infrastructure/config",
        "@pip//fastapi",
        "@pip//loguru",
        "@pip//pydantic",
    ],
)
