# List of standard imports bundles that most/all Spring Boot app will need.

java_library(
    name = "springboot_required_deps",
    visibility = ["//visibility:public"],
    exports = [
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_actuator",
        "@maven//:org_springframework_boot_spring_boot_actuator_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_autoconfigure",
        "@maven//:org_springframework_boot_spring_boot_loader",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_logging",
        "@maven//:org_springframework_spring_aop",
        "@maven//:org_springframework_spring_beans",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_expression",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_boot_spring_boot_starter_mail",
        "@maven//:org_springframework_spring_context_support",
        "@maven//:com_sun_mail_jakarta_mail",
        "@maven//:jakarta_activation_jakarta_activation_api",
        "@maven//:jakarta_mail_jakarta_mail_api",
    ],
)
