load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "services",
    srcs = [
        "__init__.py",
        "conversation_service.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/domain",
        "//agents/shared/infrastructure",
        "@pip//fastapi",
        "@pip//loguru",
        "@pip//sqlmodel",
    ],
)
