load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "application",
    srcs = [
        "__init__.py",
        "agent.py",
        "chatbot.py",
        "graph.py",
        "state.py",
        "tools.py",
    ],
    imports = ["."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/application/chat",
        "//agents/chat/infrastructure/config",
        "//shared/domain",
        "//shared/tools",
        "@pip//langchain_core",
        "@pip//langchain_tavily",
        "@pip//langgraph",
        "@pip//langgraph_checkpoint",
        "@pip//langgraph_prebuilt",
    ],
)
