load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "application",
    srcs = [
        "__init__.py",
        "graph.py",
        "nodes.py",
        "state.py",
        "summarize.py",
        "tools.py",
    ],
    imports = ["."],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/domain",
        "//agents/hotel/application",
        "//agents/shared:models",
        "//agents/shared:runtime",
        "//agents/shared/infrastructure",
        "//agents/shared/infrastructure/config",
        "//agents/shared/tools",
        "@pip//langchain_core",
        "@pip//langchain_tavily",
        "@pip//langgraph",
        "@pip//langgraph_prebuilt",
    ],
)
