load("@aspect_rules_py//py:defs.bzl", "py_library")

# gazelle:resolve py domain.value_object.TravelInput //agents/chat/domain:domain

py_library(
    name = "prompt",
    srcs = ["prompt.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/domain",
        "@pip//langchain",
    ],
)
