load("@aspect_rules_py//py:defs.bzl", "py_test")

py_test(
    name = "test_missing_info",
    srcs = ["test_missing_info.py"],
    deps = [
        "//agents/chat/application",
        "@pip//pytest",
    ],
)

py_test(
    name = "test_parse_prompt",
    srcs = ["test_parse_prompt.py"],
    deps = [
        "//agents/chat/application",
        "@pip//pytest",
    ],
)
