load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "infrastructure",
    srcs = [
        "__init__.py",
        "connection_pool.py",
        "db.py",
        "llm.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/domain",
        "//agents/shared/infrastructure/config:settings",
        "@pip//langchain_openai",
        "@pip//loguru",
        "@pip//psycopg",  # keep
        "@pip//psycopg_pool",
        "@pip//sqlalchemy",
        "@pip//sqlmodel",
    ],
)
