load("@aspect_rules_py//py:defs.bzl", "py_library")

py_library(
    name = "chat",
    srcs = [
        "__init__.py",
        "nodes.py",
        "summarize.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//agents/chat/application",
        "//agents/chat/infrastructure",
        "//agents/chat/infrastructure/config",
        "@pip//langchain_core",
    ],
)
